--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
         <div id="tip"></div>
         <script type="text/javascript">
             /***************************************
-                                                                    由于Chrome、IOS10等已不再支持非安全域的浏览器定位请求，为保证定位成功率和精度，请尽快升级您的站点到HTTPS。
-                                                                    ***************************************/
+                                                                                由于Chrome、IOS10等已不再支持非安全域的浏览器定位请求，为保证定位成功率和精度，请尽快升级您的站点到HTTPS。
+                                                                                ***************************************/
             window.onload = function() {
                 var map, geolocation;
                 map = new AMap.Map('container');
+                console.log(map)
                 map.plugin('AMap.Geolocation', function() {
                     geolocation = new AMap.Geolocation({
                         enableHighAccuracy: true, //是否使用高精度定位，默认:true
